--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dsp-project-01",
+  "homepage": "https://Hag-ras.github.io/DSP-Project-01",
   "private": true,
   "version": "0.0.0",
   "type": "module",
